--- a/week-01/homework.ipynb
+++ b/week-01/homework.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -79,10 +79,26 @@
     "id": "uhvN5mtWUH8K",
     "outputId": "77ab5c53-edfc-4c6c-b2e4-b761b71424e4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my favorite intiger is 2\n",
+      "my favorite float is 2.2\n",
+      "my favorite string is dog\n"
+     ]
+    }
+   ],
    "source": [
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n"
+    "my_int = 2\n",
+    "my_float = 2.2\n",
+    "my_str = 'dog'\n",
+    "\n",
+    "print('my favorite intiger is', my_int)\n",
+    "print('my favorite float is', my_float)\n",
+    "print('my favorite string is', my_str)\n"
    ]
   },
   {
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -130,10 +146,22 @@
     "id": "tyz1r6CATYbI",
     "outputId": "4fade25a-c5f4-441f-8781-dbd754b11a53"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 27\n",
+      "y = 54\n"
+     ]
+    }
+   ],
    "source": [
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n",
+    "x = 12 + 15\n",
+    "y = x * 2\n",
+    "print(\"x =\", x)\n",
+    "print(\"y =\", y)\n",
     "\n",
     "\n"
    ]
@@ -171,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -189,14 +217,26 @@
     "id": "9wmJSO3_ZIv9",
     "outputId": "6731dceb-f7ad-4ffe-bcb0-27b93db8ec79"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area = 13.0\n",
+      "ratio = 0.4807692307692307\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "width = 2.5\n",
     "height = 5.2\n",
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n",
+    "area = width * height\n",
+    "ratio = width / height\n",
+    "print(\"area =\", area)\n",
+    "print(\"ratio =\", ratio)\n",
     "\n"
    ]
   },
@@ -223,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -241,7 +281,15 @@
     "id": "KRprD_gjaZP3",
     "outputId": "61b69505-e64a-45db-f91a-fad80baf7638"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each player gets 3.6923076923076925 cookies.\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "cookies = 48\n",
@@ -249,6 +297,8 @@
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
     "# to do: calculate number of cookies for each player on hockey team\n",
+    "cookies_per_player = cookies / players\n",
+    "print(\"Each player gets\", cookies_per_player, \"cookies.\")\n",
     "\n",
     "\n"
    ]
@@ -283,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -301,14 +351,27 @@
     "id": "Ta3fjwXtZJw5",
     "outputId": "089161da-d004-4268-f4f7-530df33056aa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each player gets 3 cookies.\n",
+      "That leaves 9 cookies for the coach!\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "cookies = 48\n",
     "players = 13\n",
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "# to do: calculate number of cookies for each player on hockey team\n"
+    "# to do: calculate number of cookies for each player on hockey team\n",
+    "whole_cookies_per_player = cookies // players\n",
+    "cookies_left_over = cookies % players\n",
+    "print(\"Each player gets\", whole_cookies_per_player, \"cookies.\")\n",
+    "print(\"That leaves\", cookies_left_over, \"cookies for the coach!\")"
    ]
   },
   {
@@ -333,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -351,13 +414,23 @@
     "id": "ZVA2wZw1ax6Y",
     "outputId": "43b5d9be-7752-44f7-f727-b67231cbb23c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initials are: jl\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "first_name = 'john'\n",
     "last_name = 'lennon'\n",
     "\n",
-    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
+    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
+    "initials = first_name[0] + last_name[0]\n",
+    "print(\"Initials are:\", initials)"
    ]
   },
   {
@@ -390,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -408,13 +481,26 @@
     "id": "j2s27DT0bZK-",
     "outputId": "d35ce474-754f-4b90-f6d7-95094adcb751"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first half: dark\n",
+      "last half: blue\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "color = 'darkblue'\n",
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n",
+    "mid = len(color) // 2\n",
+    "first_half = color[:mid]\n",
+    "last_half = color[mid:]\n",
+    "print(\"first half:\", first_half)\n",
+    "print(\"last half:\", last_half)\n",
     "\n"
    ]
   },
@@ -439,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -457,12 +543,23 @@
     "id": "alYsciPfWzL7",
     "outputId": "f90ed3d3-db77-4530-82d4-f1960a9ced4f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The username is jane\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "email = 'jane@gmail.com'\n",
     "\n",
-    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
+    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
+    "at_position = email.find('@')\n",
+    "user = email[:at_position]\n",
+    "print(\"The username is\", user)"
    ]
   },
   {
@@ -486,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -504,9 +601,19 @@
     "id": "VDCyb7f7bage",
     "outputId": "10534bcf-ecb4-4219-b1e7-097064e8c315"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_list = [5, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
+    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
+    "my_list = [5, 3, 4]\n",
+    "print(\"my_list =\", my_list)"
    ]
   },
   {
@@ -531,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -549,7 +656,15 @@
     "id": "bs8eJjRacV0c",
     "outputId": "e253bdc9-465c-4ef1-c239-fcdd00d8adf9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ordered_list = [6, 1, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "a = 6\n",
@@ -558,7 +673,8 @@
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
     "\n",
-    "\n",
+    "ordered_list = [a, c, b]\n",
+    "print(\"ordered_list =\", ordered_list)\n",
     "\n"
    ]
   },
@@ -593,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -611,12 +727,24 @@
     "id": "aViPf6m6c1Xn",
     "outputId": "57e290e6-090c-4fad-a47a-90d88a5b2dcd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list contains 10 elements, the sum is 42 and the mean is 4.2\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "values = [6,1,7,3,5,8,2,3,6,1]\n",
     "\n",
-    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
+    "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
+    "length = len(values)\n",
+    "total = sum(values)\n",
+    "mean = total / length\n",
+    "print(\"The list contains\", length, \"elements, the sum is\", total, \"and the mean is\", mean)"
    ]
   },
   {
@@ -652,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -670,13 +798,28 @@
     "id": "guK2OZkEdY4x",
     "outputId": "e5a2a736-7684-478c-c6ae-310bd4a3cfa2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first value is 6\n",
+      "The middle value is 8\n",
+      "The last value is 1\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "values = [6,1,7,3,5,8,2,3,6,1]\n",
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n"
+    "first = values[0]\n",
+    "middle = values[len(values) // 2]\n",
+    "last = values[-1]\n",
+    "print(\"The first value is\", first)\n",
+    "print(\"The middle value is\", middle)\n",
+    "print(\"The last value is\", last)\n"
    ]
   },
   {
@@ -718,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -736,13 +879,27 @@
     "id": "c46erJG9eF6Z",
     "outputId": "537ac4f6-8dbd-43d7-fd5b-bdad0eafc2ea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 3 elements and last 3 elements combined are : [6, 1, 7, 3, 6, 1]\n",
+      "And the mean of the combined list is 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "# starter code:\n",
     "values = [6,1,7,3,5,8,2,3,6,1]\n",
     "\n",
     "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-    "\n"
+    "first_three = values[:3]\n",
+    "last_three = values[-3:]\n",
+    "combined = first_three + last_three\n",
+    "mean_combined = sum(combined) / len(combined)\n",
+    "print(\"The first 3 elements and last 3 elements combined are :\", combined)\n",
+    "print(\"And the mean of the combined list is\", mean_combined)\n"
    ]
   }
  ],
@@ -755,7 +912,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
