--- a/week-01/homework.ipynb
+++ b/week-01/homework.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my favorite intiger is 2\n",
+      "my favorite integer is 2\n",
       "my favorite float is 2.2\n",
       "my favorite string is dog\n"
      ]
@@ -96,7 +96,7 @@
     "my_float = 2.2\n",
     "my_str = 'dog'\n",
     "\n",
-    "print('my favorite intiger is', my_int)\n",
+    "print('my favorite integer is', my_int)\n",
     "print('my favorite float is', my_float)\n",
     "print('my favorite string is', my_str)\n"
    ]
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -898,7 +898,7 @@
     "last_three = values[-3:]\n",
     "combined = first_three + last_three\n",
     "mean_combined = sum(combined) / len(combined)\n",
-    "print(\"The first 3 elements and last 3 elements combined are :\", combined)\n",
+    "print(\"The first 3 elements and last 3 elements combined are:\", combined)\n",
     "print(\"And the mean of the combined list is\", mean_combined)\n"
    ]
   }
